tests/data/motifs/bad/test_pfms_bad4.jaspar
>MA0006.1	Ahr::Arnt
A  [     3      0      0      0      0      0 ]
